# demo3

./: .gitignore  CMakeLists.txt  Main.qml  README.md  app.rc  main.cpp  package.bat  src.qrc
components/: EAlertDialog.qml  EAreaChart.qml  EButton.qml  EClockCard.qml  EDataRecorder.qml  EDropdown.qml  EHoverCard.qml  EInput.qml  ERadioButton.qml  ESlider.qml  ESwitchButton.qml  ETheme.qml  WaveformDataManager.qml
pages/: HomePage.qml  SettingsPage.qml  StepRunPage.qml  WaveformPage.qml
serial/: DataRecorder.cpp  DataRecorder.h  ModbusManager.cpp  ModbusManager.h  SerialPortManager.cpp  SerialPortManager.h
